feat: cleanup status management